--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=mock-intervew
 
+frontend.url=${FRONTEND_URL}
 # OpenAI
 spring.ai.openai.api-key=${GROQ_API_KEY}
 spring.ai.openai.base-url=https://api.groq.com/openai
@@ -22,13 +23,10 @@ logging.level.org.springframework.web=INFO
 logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
 logging.level.com.example.resumeparser=DEBUG
 
-spring.ai.transformers.embedding.enabled=true
-spring.ai.transformers.embedding.options.model-name=nomic-ai/nomic-embed-text-v1.5
-
 # DataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/genai_mock?user=siddu
-spring.datasource.username=siddu
-spring.datasource.password=1234
+spring.datasource.url=jdbc:${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 
 spring.jpa.hibernate.ddl-auto=update
