--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-spring.application.name=mock-intervew
-
 frontend.url=${FRONTEND_URL}
 # OpenAI
 spring.ai.openai.api-key=${GROQ_API_KEY}
 spring.ai.openai.base-url=https://api.groq.com/openai
-spring.ai.openai.chat.options.model=llama3-8b-8192
+spring.ai.openai.chat.options.model=${MODEL_NAME}
 spring.ai.openai.chat.options.temperature=0.7
 spring.ai.openai.chat.options.max-tokens=2000
 
-server.port=8080
+server.port=${PORT:8080}
 server.servlet.context-path=/
 
 # File Upload Configuration
